@startuml diagram

class WheyProtein{
    - nome: String
    - descricao: String
    - preco: Double
    - peso: Integer
    - nota: Double
}

class Lote{
    - codigo: String 
    - quantidade: Integer
    - dataFabricacao: LocalDate
}

class Fabricante{
}

class Sabor{
    - id: Long 
    - nome: String
}

enum TipoWhey{
    + CONCENTRADO: int
    + ISOLADO: int
    + HIDROLISADO: int
}

class TabelaNutricional{
    - quantidadePorcao: Integer
    - unidadePorcao: String
    - pesoPorcaoGramas: Double
    - calorias: Double
    - gorduras: Double
    - gordurasSaturadas: Double
    - colesterol: Double
    - sodio: Double
    - fibras: Double
    - acucares: Double
}

class Funcionario{
    - salario: BigDecimal
    - dataContratacao: LocalDate
    - cargo: String
}

class Cliente {
}

class Usuario {
    - username: String
    - senha: String
    - email: String
    - dataCadastro: LocalDate
}

enum Perfil{
    + FUNCIONARIO : int
    + CLIENTE : int
    + USUARIO : int
    + FABRICANTE : int
    + ADMINISTRADOR : int
}

Usuario"*" --> "*" Perfil

abstract class Pessoa {
    - nome: String
    - email: String
}

Pessoa "1" *--> "*" Telefone
Pessoa "1" *--> "*" Endereco

class PessoaFisica {
    - cpf: String
}

class PessoaJuridica {
    - cnpj: String
}

PessoaFisica --|> Pessoa
PessoaJuridica --|> Pessoa

Pessoa "1" --> "1" Usuario
Cliente -right-> PessoaFisica
Funcionario --> PessoaFisica
Fabricante --> PessoaJuridica

class Telefone {
    - codigoArea: String
    - numero: String
}

class Pedido {
    - data: LocalDateTime
    - valorTotal: Double
}

Pedido "1" *--> "*" StatusPedido
StatusPedido "*" --> "1" Situacao

class StatusPedido {
    - dataAtualizacao: LocalDateTime
}

enum Situacao {
    + SEPARANDO_PEDIDO: int
    + PRONTO_PARA_ENVIO: int       
    + ENVIADO: int
    + EM_TRANSITO:int
    + ENTREGUE:int
    + CANCELADO:int
    + DEVOLVIDO:int
    + AGUARDANDO_PAGAMENTO:int
    + PAGAMENTO_EXPIRADO:int

}

class ItemPedido {
    - quantidade: Integer
    - preco: Double
}

class Avaliacao {
    - comentario: String
    - data: LocalDate
}

enum Nota {
    + ESTRELA_1
    + ESTRELA_2
    + ESTRELA_3
    + ESTRELA_4
    + ESTRELA_5
}

class Endereco {
    - logradouro: String
    - bairro: String
    - numero: String
    - complemento: String
    - cep: String
}

class EnderecoEntrega {
    - logradouro: String
    - bairro: String
    - numero: String
    - complemento: String
    - cep: String
}

class Cidade {
    - nome: String
}

class Estado {
    - nome: String
}

abstract class Pagamento {
    - valor: Double
    - dataPagamento: LocalDateTime
    - dataVencimento: LocalDateTime
}



class PIX {
    - chave: String
}

class Boleto {
    - codigoBarras: String
}

class CartaoPagamento {
    - nomeTitular: String
    - numero: String
    - codigoSeguranca: String
    - validade: LocalDate
}

class Cartao{
     - nomeTitular: String
    - numero: String
    - codigoSeguranca: String
    - validade: LocalDate
}

enum TipoCartao {
    + DEBITO: int
    + CREDITO: int
}

class Cupom {
    - codigo: String
    - percentualDesconto: Double
    - dataValidade: LocalDateTime
    - ativo: Boolean
}

enum TipoPagamento{
    + PIX: int
    + BOLETO : int
    + CARTAO : int
}

Pedido "1" *--> "1" Pagamento


Pagamento "*" --> "1" TipoPagamento
CartaoPagamento "*" -up-> "1" TipoCartao
Cartao "*" --> "1" TipoCartao
PIX --|> Pagamento
Boleto --|> Pagamento
CartaoPagamento --|> Pagamento

Cliente --> Cartao :listaCartoes

Pedido "1" *--> "*" ItemPedido
ItemPedido "*" --> "1" Lote
Pedido "*" o--> "1" Cupom
Pedido "*" --> "1" Cliente  
Pedido "1" *--> "1" EnderecoEntrega

Cidade "*" *--> "1" Estado
Endereco "*" --> "1" Cidade
EnderecoEntrega "*" --> "1" Cidade

WheyProtein "*" --> "1" Sabor 
WheyProtein "*" --> "1" TipoWhey
WheyProtein "1" *--> "1" TabelaNutricional
WheyProtein "*" --> "1" Fabricante
Lote "*" --> "1" WheyProtein

Cliente "*" --> "*" WheyProtein : listaDesejos
Cupom "*" o--> "1" Fabricante
Avaliacao "*" -down-> "1" Cliente
Avaliacao "*" --> "1" WheyProtein
Avaliacao "*" -right-> "1" Nota

note left of WheyProtein: Peso em gramas

@enduml
